--- a/locales/fr.json
+++ b/locales/fr.json
@@ -483,6 +483,9 @@
             "access_simple": {
                 "label": "Accès"
             },
+            "access_toilets": {
+                "label": "Accès"
+            },
             "address": {
                 "label": "Adresse",
                 "placeholders": {
@@ -815,16 +818,7 @@
                 "label": "Type"
             },
             "religion": {
-                "label": "Religion",
-                "options": {
-                    "christian": "Chrétienne",
-                    "muslim": "Islamique",
-                    "buddhist": "Bouddhiste",
-                    "jewish": "Juive",
-                    "hindu": "Hindouiste",
-                    "shinto": "Shintoïste",
-                    "taoist": "Taoïste"
-                }
+                "label": "Religion"
             },
             "restriction": {
                 "label": "Type"
@@ -834,9 +828,6 @@
             },
             "route_master": {
                 "label": "Type"
-            },
-            "sac_scale": {
-                "label": "Difficulté du chemin"
             },
             "service": {
                 "label": "Type"
@@ -893,9 +884,6 @@
             },
             "towertype": {
                 "label": "Type de tour"
-            },
-            "tracktype": {
-                "label": "Type"
             },
             "trail_visibility": {
                 "label": "Visibilité du sentier"
@@ -1055,6 +1043,10 @@
             "amenity/boat_rental": {
                 "name": "Location de bateau",
                 "terms": "Location de bateaux"
+            },
+            "amenity/bus_station": {
+                "name": "Gare routière",
+                "terms": "Gare, Arrêt, Arrêt de bus"
             },
             "amenity/cafe": {
                 "name": "Café",
@@ -1622,6 +1614,10 @@
                 "name": "Passage pieton ",
                 "terms": "Passage piéton"
             },
+            "footway/crosswalk": {
+                "name": "Passage piéton",
+                "terms": "Passage piéton, Zébra, Passage zébré"
+            },
             "footway/sidewalk": {
                 "name": "Trottoir",
                 "terms": "Trottoir"
@@ -1655,7 +1651,7 @@
             },
             "highway/bus_stop": {
                 "name": "Arrêt de bus",
-                "terms": "Arrêt de bus"
+                "terms": "Arrêt de bus, Gare, Gare routière"
             },
             "highway/crossing": {
                 "name": "Passage piéton",
@@ -2271,7 +2267,12 @@
                 "terms": "Localité"
             },
             "place/neighbourhood": {
-                "name": "Voisinage"
+                "name": "Voisinage",
+                "terms": "Environs, Voisinage, Quartier"
+            },
+            "place/suburb": {
+                "name": "Commune",
+                "terms": "Commune, Municipalité, District, Arrondissement, Bourough"
             },
             "place/town": {
                 "name": "Ville (10.000-100.000 habitants)",
@@ -2322,7 +2323,7 @@
                 "terms": "Quai"
             },
             "public_transport/stop_position": {
-                "name": "Arrêt",
+                "name": "Position d’arrêt sur une route de transport en commun",
                 "terms": "Arrêt"
             },
             "railway": {
@@ -2341,8 +2342,8 @@
                 "name": "Funiculaire"
             },
             "railway/halt": {
-                "name": "Hall de gare",
-                "terms": "Halte ferroviaire"
+                "name": "Halte ferroviaire",
+                "terms": "Arrêt ferroviaire, Arrêt"
             },
             "railway/level_crossing": {
                 "name": "Passage à niveau",
@@ -2356,7 +2357,7 @@
                 "name": "Voie étroite"
             },
             "railway/platform": {
-                "name": "Quai de gare",
+                "name": "Quai de gare ferroviaire",
                 "terms": "Quai de gare"
             },
             "railway/rail": {
@@ -2364,8 +2365,8 @@
                 "terms": "Rail"
             },
             "railway/station": {
-                "name": "Gare",
-                "terms": "Gare ferroviaire, Gare"
+                "name": "Gare ferroviaire",
+                "terms": "Gare ferroviaire, Gare, Arrêt"
             },
             "railway/subway": {
                 "name": "Métro",
