--- a/locales/da.json
+++ b/locales/da.json
@@ -150,7 +150,8 @@
                 "area": "Flyttede et område.",
                 "multiple": "Flyttede flere objekter."
             },
-            "incomplete_relation": "Dette element kan ikke flyttes, fordi det ikke er fuldstændigt downloadet."
+            "incomplete_relation": "Dette element kan ikke flyttes, fordi det ikke er fuldstændigt downloadet.",
+            "too_large": "Dette kan ikke flyttes pga der ikke er nok synligt."
         },
         "rotate": {
             "title": "Roter",
@@ -159,7 +160,8 @@
             "annotation": {
                 "line": "Roterede en linje.",
                 "area": "Roterede et område."
-            }
+            },
+            "too_large": "Dette kunne ikke blive roteret pga der ikke var nok synligt."
         },
         "reverse": {
             "title": "Reverser",
@@ -481,6 +483,10 @@
                 }
             },
             "access_simple": {
+                "label": "Adgang",
+                "placeholder": "ja"
+            },
+            "access_toilets": {
                 "label": "Adgang"
             },
             "address": {
@@ -508,7 +514,12 @@
                 "label": "Type"
             },
             "aerialway/access": {
-                "label": "Adgang"
+                "label": "Adgang",
+                "options": {
+                    "entry": "Indgang",
+                    "exit": "Udgang",
+                    "both": "Begge"
+                }
             },
             "aerialway/bubble": {
                 "label": "Skikabine"
@@ -529,7 +540,12 @@
                 "placeholder": "2, 4, 8..."
             },
             "aerialway/summer/access": {
-                "label": "Adgang (sommer)"
+                "label": "Adgang (sommer)",
+                "options": {
+                    "entry": "Indgang",
+                    "exit": "Udgang",
+                    "both": "Begge"
+                }
             },
             "aeroway": {
                 "label": "Type"
@@ -569,7 +585,25 @@
                 "placeholder": "50, 100, 200..."
             },
             "cardinal_direction": {
-                "label": "Retning"
+                "label": "Retning",
+                "options": {
+                    "N": "Nord",
+                    "E": "Øst",
+                    "S": "Syd",
+                    "W": "Vest",
+                    "NE": "Nordøst",
+                    "SE": "Sydøst",
+                    "SW": "Sydvest",
+                    "NW": "Nordvest",
+                    "NNE": "Nord-nordøst",
+                    "ENE": "Øst-nordøst",
+                    "ESE": "Øst-sydøst",
+                    "SSE": "Syd-sydøst",
+                    "SSW": "Syd-sydvest",
+                    "WSW": "Vest-sydvest",
+                    "WNW": "Vest-nordvest",
+                    "NNW": "Nord-nordvest"
+                }
             },
             "clock_direction": {
                 "label": "Retning",
@@ -609,7 +643,10 @@
                 "label": "Beskrivelse"
             },
             "electrified": {
-                "label": "Elektrificering"
+                "label": "Elektrificering",
+                "options": {
+                    "no": "Nej"
+                }
             },
             "elevation": {
                 "label": "Højde over havet"
@@ -631,7 +668,12 @@
                 "label": "Gebyr"
             },
             "fire_hydrant/type": {
-                "label": "Type"
+                "label": "Type",
+                "options": {
+                    "pillar": "Brandhane/Overjordisk",
+                    "underground": "Underjordisk",
+                    "wall": "Mur"
+                }
             },
             "fixme": {
                 "label": "Ret mig"
@@ -711,6 +753,8 @@
             "internet_access": {
                 "label": "Internetadgang",
                 "options": {
+                    "yes": "Ja",
+                    "no": "Nej",
                     "wlan": "Wifi",
                     "wired": "Kabeladgang",
                     "terminal": "Terminal"
@@ -752,6 +796,21 @@
                 "label": "Hastighedsbegrænsning",
                 "placeholder": "40, 50, 60..."
             },
+            "mtb/scale": {
+                "placeholder": "0, 1, 2, 3..."
+            },
+            "mtb/scale/imba": {
+                "options": {
+                    "0": "Nemmeste (hvid cirkel)",
+                    "1": "Let (grøn cirkel)",
+                    "2": "Medium (blå firkant)",
+                    "3": "Vanskelig (sort diamant)",
+                    "4": "Ekstremt vanskeligt (dobbelt sort diamant)"
+                }
+            },
+            "mtb/scale/uphill": {
+                "placeholder": "0, 1, 2, 3..."
+            },
             "name": {
                 "label": "Navn",
                 "placeholder": "Mest kendte navn (hvis nogen)"
@@ -771,13 +830,17 @@
             "oneway": {
                 "label": "Ensrettet",
                 "options": {
-                    "undefined": "Forventet at være Nej"
+                    "undefined": "Forventet at være Nej",
+                    "yes": "Ja",
+                    "no": "Nej"
                 }
             },
             "oneway_yes": {
                 "label": "Ensrettet",
                 "options": {
-                    "undefined": "Forventet at være Ja"
+                    "undefined": "Forventet at være Ja",
+                    "yes": "Ja",
+                    "no": "Nej"
                 }
             },
             "opening_hours": {
@@ -794,20 +857,37 @@
                 "label": "Park and ride-anlæg"
             },
             "parking": {
-                "label": "Type"
+                "label": "Type",
+                "options": {
+                    "surface": "Overflade",
+                    "underground": "Underjordisk",
+                    "sheds": "Skur",
+                    "carports": "Carporte",
+                    "garage_boxes": "Garagebokse"
+                }
             },
             "phone": {
                 "label": "Telefon",
                 "placeholder": "+31 42 123 4567"
             },
             "piste/difficulty": {
-                "label": "Vanskelighedsniveau"
+                "label": "Vanskelighedsniveau",
+                "options": {
+                    "novice": "Nybegynder (instruktioner)",
+                    "easy": "Nemt (grøn cirkel)",
+                    "freeride": "Freeride (off-piste)"
+                }
             },
             "piste/grooming": {
                 "label": "Sikkerhed"
             },
             "piste/type": {
-                "label": "Type"
+                "label": "Type",
+                "options": {
+                    "nordic": "Nordisk",
+                    "sleigh": "Kælk",
+                    "playground": "Legeplads"
+                }
             },
             "place": {
                 "label": "Type"
@@ -840,16 +920,7 @@
                 "label": "Type"
             },
             "religion": {
-                "label": "Religion",
-                "options": {
-                    "christian": "Kristen",
-                    "muslim": "Muslimsk",
-                    "buddhist": "Buddhist",
-                    "jewish": "Jødisk",
-                    "hindu": "Hinduisme",
-                    "shinto": "Shinto",
-                    "taoist": "Taoist"
-                }
+                "label": "Religion"
             },
             "restriction": {
                 "label": "Type"
@@ -864,7 +935,14 @@
                 "label": "Type"
             },
             "sac_scale": {
-                "label": "Sti sværhedsgrad"
+                "options": {
+                    "hiking": "T1: Vandring",
+                    "mountain_hiking": "T2: Bjergvandring",
+                    "demanding_mountain_hiking": "T3: Udfordrende bjergvandring",
+                    "alpine_hiking": "T4: Alpint vandring",
+                    "demanding_alpine_hiking": "T5: Udfordrende alpint vandring",
+                    "difficult_alpine_hiking": "T6: Vanskelig alpint vandring"
+                }
             },
             "seasonal": {
                 "label": " Sæsonpræget"
@@ -885,7 +963,11 @@
                 "label": "Sløfekurve"
             },
             "smoking": {
-                "label": "Rygning"
+                "label": "Rygning",
+                "options": {
+                    "outside": "Tilladt udenfor",
+                    "yes": "Tilladt alle steder"
+                }
             },
             "social_facility_for": {
                 "label": "Serviceret folk",
@@ -924,16 +1006,16 @@
                 "label": "Tactile Paving"
             },
             "toilets/disposal": {
-                "label": "Bortskaffelse affald"
+                "label": "Bortskaffelse affald",
+                "options": {
+                    "bucket": "Spand"
+                }
             },
             "tourism": {
                 "label": "Type"
             },
             "towertype": {
                 "label": "Tårn type"
-            },
-            "tracktype": {
-                "label": "Type"
             },
             "trail_visibility": {
                 "label": "Spor synlighed"
@@ -1096,6 +1178,10 @@
             "amenity/boat_rental": {
                 "name": "Bådudlejning",
                 "terms": "Bådudlejning, lystbådudlejning"
+            },
+            "amenity/bus_station": {
+                "name": "Busstation",
+                "terms": "Busstation, Rutebilsstation"
             },
             "amenity/cafe": {
                 "name": "Cafe",
