--- a/locales/ru.json
+++ b/locales/ru.json
@@ -150,7 +150,8 @@
                 "area": "Смещён контур.",
                 "multiple": "Передвинуты несколько объектов."
             },
-            "incomplete_relation": "Этот объект нельзя двигать, потому что он загружен не целиком."
+            "incomplete_relation": "Этот объект нельзя двигать, потому что он загружен не целиком.",
+            "too_large": "Объект не может быть сдвинут, поскольку большая его часть скрыта."
         },
         "rotate": {
             "title": "Повернуть",
@@ -159,7 +160,8 @@
             "annotation": {
                 "line": "Повернута линия.",
                 "area": "Повёрнут контур."
-            }
+            },
+            "too_large": "Объект не может быть повёрнут, поскольку большая его часть скрыта."
         },
         "reverse": {
             "title": "Развернуть",
@@ -481,6 +483,10 @@
                 }
             },
             "access_simple": {
+                "label": "Ограничения",
+                "placeholder": "да"
+            },
+            "access_toilets": {
                 "label": "Ограничения"
             },
             "address": {
@@ -503,7 +509,15 @@
                 "label": "Тип"
             },
             "aerialway/access": {
-                "label": "Ограничения"
+                "label": "Ограничения",
+                "options": {
+                    "entry": "Вход",
+                    "exit": "Выход",
+                    "both": "Оба"
+                }
+            },
+            "aerialway/bubble": {
+                "label": "Пузырь"
             },
             "aerialway/capacity": {
                 "label": "Пропускная способность (в час)",
@@ -521,7 +535,12 @@
                 "placeholder": "2, 4, 8..."
             },
             "aerialway/summer/access": {
-                "label": "Ограничения (летом)"
+                "label": "Ограничения (летом)",
+                "options": {
+                    "entry": "Вход",
+                    "exit": "Выход",
+                    "both": "Оба"
+                }
             },
             "aeroway": {
                 "label": "Тип"
@@ -561,7 +580,25 @@
                 "placeholder": "50, 100, 200..."
             },
             "cardinal_direction": {
-                "label": "Направление"
+                "label": "Направление",
+                "options": {
+                    "N": "Север",
+                    "E": "Восток",
+                    "S": "Юг",
+                    "W": "Запад",
+                    "NE": "Северо-восток",
+                    "SE": "Юго-восток",
+                    "SW": "Юго-запад",
+                    "NW": "Северо-запад",
+                    "NNE": "Северо-северо-восток",
+                    "ENE": "Северо-восток-восток",
+                    "ESE": "Юго-восток-восток",
+                    "SSE": "Юго-юго-восток",
+                    "SSW": "Юго-юго-запад",
+                    "WSW": "Юго-запад-запад",
+                    "WNW": "Северо-запад-запад",
+                    "NNW": "Северо-северо-запад"
+                }
             },
             "clock_direction": {
                 "label": "Направление",
@@ -601,7 +638,11 @@
                 "label": "Описание"
             },
             "electrified": {
-                "label": "Электрификация"
+                "label": "Электрификация",
+                "options": {
+                    "yes": "Да (без уточнения)",
+                    "no": "Нет"
+                }
             },
             "elevation": {
                 "label": "Высота над уровнем моря"
@@ -623,7 +664,11 @@
                 "label": "Стоимость"
             },
             "fire_hydrant/type": {
-                "label": "Тип"
+                "label": "Тип",
+                "options": {
+                    "wall": "Стена",
+                    "pond": "Пруд"
+                }
             },
             "fixme": {
                 "label": "Исправь меня"
@@ -691,6 +736,8 @@
             "internet_access": {
                 "label": "Доступ в интернет",
                 "options": {
+                    "yes": "Да",
+                    "no": "Нет",
                     "wlan": "Wifi",
                     "wired": "Проводной",
                     "terminal": "Терминал"
@@ -732,6 +779,9 @@
                 "label": "Ограничение скорости",
                 "placeholder": "40, 50, 60..."
             },
+            "mtb/scale": {
+                "placeholder": "0, 1, 2, 3…"
+            },
             "name": {
                 "label": "Название",
                 "placeholder": "Разговорное название (если есть)"
@@ -751,13 +801,17 @@
             "oneway": {
                 "label": "Одностороннее движение",
                 "options": {
-                    "undefined": "Предполагается «нет»"
+                    "undefined": "Предполагается «нет»",
+                    "yes": "Да",
+                    "no": "Нет"
                 }
             },
             "oneway_yes": {
                 "label": "Одностороннее движение",
                 "options": {
-                    "undefined": "Предполагается «да»"
+                    "undefined": "Предполагается «да»",
+                    "yes": "Да",
+                    "no": "Нет"
                 }
             },
             "opening_hours": {
@@ -819,16 +873,7 @@
                 "label": "Тип"
             },
             "religion": {
-                "label": "Религия",
-                "options": {
-                    "christian": "Христианство",
-                    "muslim": "Мусульманство",
-                    "buddhist": "Буддизм",
-                    "jewish": "Иудаизм",
-                    "hindu": "Индуизм",
-                    "shinto": "Синтоизм",
-                    "taoist": "Таоизм"
-                }
+                "label": "Религия"
             },
             "restriction": {
                 "label": "Тип"
@@ -841,9 +886,6 @@
             },
             "route_master": {
                 "label": "Тип"
-            },
-            "sac_scale": {
-                "label": "Категория сложности"
             },
             "seasonal": {
                 "label": "Сезонное"
@@ -906,9 +948,6 @@
             },
             "towertype": {
                 "label": "Тип башни"
-            },
-            "tracktype": {
-                "label": "Тип"
             },
             "trail_visibility": {
                 "label": "Видимость"
@@ -1067,6 +1106,9 @@
                 "name": "Аренда Лодок",
                 "terms": "Прокат Лодок"
             },
+            "amenity/bus_station": {
+                "name": "Автобусная станция"
+            },
             "amenity/cafe": {
                 "name": "Кафе",
                 "terms": "Кафе"
@@ -1086,6 +1128,9 @@
             "amenity/charging_station": {
                 "name": "Станция для зарядки",
                 "terms": "станция зарядки, станция для подзарядки, станция подзарядки, станция для зарядки электромобилей, станция зарядки электромобилей, станция для подзарядки электромобилей, станция подзарядки электромобилей, "
+            },
+            "amenity/childcare": {
+                "name": "Уход за детьми"
             },
             "amenity/cinema": {
                 "name": "Кинотеатр",
@@ -1421,7 +1466,7 @@
                 "terms": "Гостиница, Отель, Здание гостиницы, Здание отеля"
             },
             "building/house": {
-                "name": "Дом",
+                "name": "Частный дом",
                 "terms": "дом, частный дом, изба, хата"
             },
             "building/hut": {
@@ -1436,7 +1481,7 @@
                 "name": "Общественное здание, Общественный центр"
             },
             "building/residential": {
-                "name": "Жилой Дом",
+                "name": "Жилой дом",
                 "terms": "Жилой дом, Жилое здание"
             },
             "building/retail": {
@@ -1729,6 +1774,9 @@
                 "name": "Автомагистраль",
                 "terms": "Автомагистраль, Скоростная автострада, Скоростное шоссе, Автобан, Скоростная автодорога, Хайвэй, Скоростна автотрасса"
             },
+            "highway/motorway_junction": {
+                "name": "Развязка / съезд"
+            },
             "highway/motorway_link": {
                 "name": "Съезд с автомагистрали",
                 "terms": "Съезд с автомагистрали, Съезд со скоростной автострады, Съезд со скоростного шоссе, Съезд с автобана, Съезд со скоростной автодороги, Съезд с хайвэя, Съезд со скоростной автотрассы"
@@ -2016,6 +2064,9 @@
             "leisure/slipway": {
                 "name": "Стапель",
                 "terms": "Стапель"
+            },
+            "leisure/sports_center": {
+                "name": "Спортивный центр / тренажёрный зал"
             },
             "leisure/stadium": {
                 "name": "Стадион с трибунами",
@@ -2621,6 +2672,9 @@
             "shop/supermarket": {
                 "name": "Гипермаркет",
                 "terms": "супермаркет"
+            },
+            "shop/tailor": {
+                "name": "Портной"
             },
             "shop/toys": {
                 "name": "Игрушки",
