--- a/locales/sr.json
+++ b/locales/sr.json
@@ -460,6 +460,10 @@
                 }
             },
             "access_simple": {
+                "label": "Приступ",
+                "placeholder": "да"
+            },
+            "access_toilets": {
                 "label": "Приступ"
             },
             "address": {
@@ -486,7 +490,11 @@
                 "label": "Врста"
             },
             "aerialway/access": {
-                "label": "Приступ"
+                "label": "Приступ",
+                "options": {
+                    "entry": "Улаз",
+                    "exit": "Излаз"
+                }
             },
             "aerialway/capacity": {
                 "label": "Капацитет (по сату)",
@@ -503,7 +511,11 @@
                 "placeholder": "2, 4, 8..."
             },
             "aerialway/summer/access": {
-                "label": "Приступ (лети)"
+                "label": "Приступ (лети)",
+                "options": {
+                    "entry": "Улаз",
+                    "exit": "Излаз"
+                }
             },
             "aeroway": {
                 "label": "Врста"
@@ -543,7 +555,25 @@
                 "placeholder": "50, 100, 200..."
             },
             "cardinal_direction": {
-                "label": "Правац"
+                "label": "Правац",
+                "options": {
+                    "N": "Север",
+                    "E": "Исток",
+                    "S": "Југ",
+                    "W": "Запад",
+                    "NE": "Североисток",
+                    "SE": "Југоисток",
+                    "SW": "Југозапад",
+                    "NW": "Северозапад",
+                    "NNE": "Север-северозапад",
+                    "ENE": "Исток-североисток",
+                    "ESE": "Исток-југоисток",
+                    "SSE": "Југ-југоисток",
+                    "SSW": "Југ-југозапад",
+                    "WSW": "Запад-југозапад",
+                    "WNW": "Запад-северозапад",
+                    "NNW": "Север-северозапад"
+                }
             },
             "clock_direction": {
                 "label": "Правац",
@@ -580,7 +610,12 @@
                 "label": "Опис"
             },
             "electrified": {
-                "label": "Електрификација"
+                "label": "Електрификација",
+                "options": {
+                    "contact_line": "Контактна мрежа",
+                    "yes": "Да (неодређено)",
+                    "no": "Не"
+                }
             },
             "elevation": {
                 "label": "Надморска висина"
@@ -602,10 +637,19 @@
                 "label": "Провизија"
             },
             "fire_hydrant/type": {
-                "label": "Врста"
+                "label": "Врста",
+                "options": {
+                    "pillar": "Стуб/Надземни",
+                    "underground": "Подземни",
+                    "wall": "Зид",
+                    "pond": "Резервоар"
+                }
             },
             "fixme": {
                 "label": "Поправи ме"
+            },
+            "fuel": {
+                "label": "Гориво"
             },
             "fuel/biodiesel": {
                 "label": "Продаје биодизел"
@@ -669,6 +713,8 @@
             "internet_access": {
                 "label": "Приступ Интернету",
                 "options": {
+                    "yes": "Да",
+                    "no": "Не",
                     "wlan": "Бежични Интернет",
                     "wired": "Кабловски",
                     "terminal": "Терминал"
@@ -710,6 +756,12 @@
                 "label": "Ограничење брзине",
                 "placeholder": "40, 50, 60..."
             },
+            "mtb/scale": {
+                "placeholder": "0, 1, 2, 3..."
+            },
+            "mtb/scale/uphill": {
+                "placeholder": "0, 1, 2, 3..."
+            },
             "name": {
                 "label": "Име",
                 "placeholder": "Уобичајени назив (ако постоји)"
@@ -727,10 +779,18 @@
                 "label": "Врста"
             },
             "oneway": {
-                "label": "Једносмерни"
+                "label": "Једносмерни",
+                "options": {
+                    "yes": "Да",
+                    "no": "Не"
+                }
             },
             "oneway_yes": {
-                "label": "Једносмерна"
+                "label": "Једносмерна",
+                "options": {
+                    "yes": "Да",
+                    "no": "Не"
+                }
             },
             "opening_hours": {
                 "label": "Радно време"
@@ -745,7 +805,12 @@
                 "label": "Подстицај паркирања"
             },
             "parking": {
-                "label": "Врста"
+                "label": "Врста",
+                "options": {
+                    "multi-storey": "Вишеспратни",
+                    "underground": "Подземни",
+                    "sheds": "Наткривени"
+                }
             },
             "phone": {
                 "label": "Телефон",
@@ -755,7 +820,10 @@
                 "label": "Тежина"
             },
             "piste/type": {
-                "label": "Врста"
+                "label": "Врста",
+                "options": {
+                    "playground": "Игралиште"
+                }
             },
             "place": {
                 "label": "Врста"
@@ -788,16 +856,7 @@
                 "label": "Врста"
             },
             "religion": {
-                "label": "Религија",
-                "options": {
-                    "christian": "Хришћанство",
-                    "muslim": "Ислам",
-                    "buddhist": "Будизам",
-                    "jewish": "Јудаизам",
-                    "hindu": "Хинду",
-                    "shinto": "Шинто",
-                    "taoist": "Таоизам"
-                }
+                "label": "Религија"
             },
             "restriction": {
                 "label": "Врста"
@@ -810,9 +869,6 @@
             },
             "route_master": {
                 "label": "Врста"
-            },
-            "sac_scale": {
-                "label": "Тежина стазе"
             },
             "seasonal": {
                 "label": "Сезонско"
@@ -873,11 +929,9 @@
             "towertype": {
                 "label": "Врста торња"
             },
-            "tracktype": {
-                "label": "Врста"
-            },
             "trail_visibility": {
-                "label": "Видљивост стазе"
+                "label": "Видљивост стазе",
+                "placeholder": "Одлично, добро, лоше..."
             },
             "tree_type": {
                 "label": "Врста"
@@ -1022,6 +1076,9 @@
             },
             "amenity/doctor": {
                 "name": "Лекар"
+            },
+            "amenity/dojo": {
+                "name": "Школа борилачких вештина"
             },
             "amenity/drinking_water": {
                 "name": "Пијаћа вода"
@@ -2070,6 +2127,9 @@
             },
             "shop/supermarket": {
                 "name": "Самопослуга"
+            },
+            "shop/tailor": {
+                "name": "Kројач"
             },
             "shop/toys": {
                 "name": "Продавница играчака"
